@@ -1,9 +1,15 @@
 from __future__ import absolute_import
+
+from email.parser import FeedParser
+
 import logging
 import sys
 
 from pip._vendor.packaging import specifiers
 from pip._vendor.packaging import version
+from pip._vendor import pkg_resources
+
+from pip import exceptions
 
 logger = logging.getLogger(__name__)
 
@@ -26,3 +32,32 @@ def check_requires_python(requires_python):
     # We only use major.minor.micro
     python_version = version.parse('.'.join(map(str, sys.version_info[:3])))
     return python_version in requires_python_specifier
+
+
+def get_metadata(dist):
+    if (isinstance(dist, pkg_resources.DistInfoDistribution) and
+            dist.has_metadata('METADATA')):
+        return dist.get_metadata('METADATA')
+    elif dist.has_metadata('PKG-INFO'):
+        return dist.get_metadata('PKG-INFO')
+
+
+def check_dist_requires_python(dist):
+    metadata = get_metadata(dist)
+    feed_parser = FeedParser()
+    feed_parser.feed(metadata)
+    pkg_info_dict = feed_parser.close()
+    requires_python = pkg_info_dict.get('Requires-Python')
+    try:
+        if not check_requires_python(requires_python):
+            raise exceptions.UnsupportedPythonVersion(
+                "%s requires Python '%s' but the running Python is %s" % (
+                    dist.project_name,
+                    requires_python,
+                    '.'.join(map(str, sys.version_info[:3])),)
+            )
+    except specifiers.InvalidSpecifier as e:
+        logger.debug(
+            "Package %s has an invalid Requires-Python entry %s - %s" % (
+                dist.project_name, requires_python, e))
+        return
