@@ -52,6 +52,8 @@
 
 * Normalize package names before using in ``pip show`` (:issue:`3976`)
 
+* Raises when Requires-Python do not match the running version.
+
 
 **8.1.2 (2016-05-10)**
 
